<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="hello">Hello World, Lop!</string>
    <string name="app_name">MyShows</string>

    <!--Tabs titles-->
    <string name="tab_search_title">Search</string>
    <string name="tab_login_title">Login</string>
    <string name="tab_profile_title">Profile</string>
    <string name="tab_shows_title">Shows</string>
    <string name="tab_new">New Episodes</string>
    <string name="tab_next">Next Episodes</string>
    <string name="tab_news_title">News</string>
    <string name="tab_show">Show</string>
    <string name="tab_episodes">Episodes</string>


    <string name="search">Search</string>
    <string name="search_button">Search</string>
    <string name="favourites_text">Rating</string>
    <string name="catalog_text">Catalog</string>
    <string name="users_text">Users</string>
    <string name="username">Login</string>
    <string name="password">Password</string>
    <string name="login_action">Sign in</string>
    <string name="register_action">Register</string>
    <string name="cancel_action">Cancel</string>
    <string name="wrong_login_or_password">Wrong username or password</string>
   <string name="logout">Log out</string>
   <string name="save">Save</string>
   <string name="search_query">Input search query</string>

    <!--Register-->
    <string name="gender_male">M</string>
    <string name="gender_female">F</string>
    <string name="register_username">Login*</string>
    <string name="register_password">Password*</string>
    <string name="register_failed">Register failed</string>


    <string name="loading">Loading...</string>


    <string name="search_results">Search results</string>
    <string name="top">Top</string>
    <string name="all">All</string>
    <string name="status_watching">Watching</string>
    <string name="status_will_watch">Will watch</string>
    <string name="status_finished">Finished</string>
    <string name="status_cancelled">Cancelled</string>
    <string name="status_remove">Remove</string>

    <array name="show_statuses">
        <item>Watching</item>
        <item>Will watch</item>
        <item>Finished</item>
        <item>Cancelled</item>
        <item>Remove</item>
    </array>




    <string name="changes_saved">Changes has been saved</string>
    <string name="changes_not_saved">Changes not saved</string>
    <string name="changes_not_all_saved">Not all changes not saved</string>


    <string name="register_title">Register</string>
    <string name="register_message">Go to http://myshows.ru to create an account.</string>

    <string name="menu_check_all">Check all</string>
    <string name="menu_view_on_site">View on site</string>
    <string name="menu_update">Refresh</string>
    <string name="menu_settings">Settings</string>
    <string name="menu_save">Save</string>
    <string name="menu_search">Filter</string>
    <string name="menu_exit">Exit</string>



    <string name="episode_rating">Episode rating</string>
    <string name="season">Season</string>



    <string name="date">Date:</string>
    <string name="genres">Genres:</string>
    <string name="watching">Watching:</string>
    <string name="my_shows_rating">MyShows:</string>
    <string name="yours_rating">Yours:</string>


    <string name="watched_episodes">Watched episodes</string>
    <string name="watched_hours">Watched hours</string>
    <string name="watched_days">Watched days</string>

    <string name="action_watched">watched</string>
    <string name="episode">episode</string>
    <string name="episodes">episodes</string>


    <string name="on">On</string>
    <string name="off">Off</string>
    <string name="ok">Ok</string>
    <string name="cancel">Cancel</string>

     <string name="pref_title">Settings</string>
     <string name="pref_show_news">Show friends news</string>
     <string name="pref_next_news">Show next episodes</string>
     <string name="pref_profile_news">Show profile</string>
     <string name="pref_show_sort">Shows sort options</string>
     <string name="pref_seasons_sort">Seasons/episodes sort options</string>
    <string name="pref_sort_status">By watch status</string>
    <string name="pref_sort_alph">By alphabet</string>


     <string name="request_exit">Are you sure?</string>
     <string name="yes">Yes</string>
     <string name="no">No</string>
     <string name="asc">Asc</string>
     <string name="desc">Desc</string>


    <string name="something_wrong">Something wrong 0_o</string>
    <string name="try_again">Maybe there is no internet connection. Try again?</string>


    <string name="unwatched">unwatched</string>

    <string-array name="months">
        <item>January</item>
        <item>February</item>
        <item>March</item>
        <item>April</item>
        <item>May</item>
        <item>June</item>
        <item>July</item>
        <item>August</item>
        <item>September</item>
        <item>October</item>
        <item>November</item>
        <item>December</item>
    </string-array>


    <string-array name="pref_sort_options">
        <item>Watch Status</item>
        <item>Alphabet</item>
    </string-array>

    <string-array name="pref_sort_options_values">
        <item>status</item>
        <item>alphabet</item>
    </string-array>

    <string-array name="pref_seasons_options">
        <item>Asc</item>
        <item>Desc</item>
    </string-array>

    <string-array name="pref_seasons_options_values">
        <item>asc</item>
        <item>desc</item>
    </string-array>

    <string-array name="left_menu">
        <item>Episodes</item>
        <item>Profile</item>
        <item>Friends News</item>
        <item>Shows Rating</item>
        <item>Logout</item>
    </string-array>

    <string name="drawer_open">Open navigation drawer</string>
    <string name="drawer_close">Close navigation drawer</string>


    <string-array name="episodes_titles">
        <item>New Episodes</item>
        <item>Coming Soon</item>
    </string-array>

    <string-array name="profile_titles">
        <item>Shows</item>
        <item>Stats</item>
    </string-array>

    <string-array name="stats_titles">
        <item>Stats</item>
    </string-array>

    <string-array name="show_titles">
        <item>Show</item>
        <item>Episodes</item>
    </string-array>

    <string-array name="login">
        <item>Login</item>
    </string-array>

    <string name="add_new">Add show</string>

    <string name="empty_show_list">It seems you still do not have TV shows in your profile. In order to add TV shows follow to Shows Rating or click Add button at top-right corner.</string>
    <string name="empty_search">No results found, try another search.</string>
    <string name="show_unavailable">Show information is unavailable</string>

</resources>
