<?xml version="1.0" encoding="utf-8"?>

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:orientation="vertical"
              android:layout_width="fill_parent"
              android:layout_height="fill_parent"
        >


    <LinearLayout android:orientation="vertical"
                  android:layout_width="fill_parent"
                  android:layout_height="fill_parent"
                  android:layout_weight="1"
                  android:gravity="bottom">


        <EditText
                android:id="@+id/login_field"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:hint="@string/register_username"
                android:layout_marginLeft="10dip"
                android:layout_marginRight="10dip"
                android:singleLine="true"
                />
        <EditText
                android:id="@+id/password_field"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:hint="@string/register_password"
                android:layout_marginLeft="10dip"
                android:layout_marginRight="10dip"
                android:password="true"
                android:singleLine="true"
                />

         <EditText
                android:id="@+id/email_field"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dip"
                android:layout_marginRight="10dip"
                android:hint="E-mail"
                android:singleLine="true"
                />

        <RadioGroup
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:checkedButton="@+id/gender_male"
                android:layout_marginLeft="10dip"
                android:layout_marginRight="10dip"
                android:id="@+id/gender"
                >

            <RadioButton android:id="@id/gender_male"
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
                         android:text="@string/gender_male"
                    />
            <RadioButton android:id="@+id/gender_female"
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
                         android:text="@string/gender_female"
                    />

        </RadioGroup>

    </LinearLayout>

    <LinearLayout android:orientation="horizontal"
                  android:layout_width="fill_parent"
                  android:layout_height="fill_parent"
                  android:layout_weight="1">

        <Button
                android:id="@+id/register_button"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:text="@string/register_action"
                android:layout_marginLeft="10dip"
                android:layout_marginBottom="10dip"
                android:layout_weight="1"
                />
        <Button
                android:id="@+id/cancel_button"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_marginRight="10dip"
                android:layout_marginBottom="10dip"
                android:text="@string/cancel_action"
                android:layout_weight="1"
                />
    </LinearLayout>


</LinearLayout>