<?xml version="1.0" encoding="utf-8"?>

    <ScrollView android:layout_width="fill_parent"
                android:layout_height="fill_parent"
                android:background="@drawable/gradient_background"
                xmlns:android="http://schemas.android.com/apk/res/android"
                android:padding="5dp"
            >

        <LinearLayout android:layout_width="fill_parent"
                      android:layout_height="wrap_content"
                      android:orientation="vertical"
                >

            <ImageView
                    android:id="@+id/show_logo"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    />

            <LinearLayout android:id="@+id/show_info"
                          android:layout_width="fill_parent"
                          android:layout_height="wrap_content"
                          android:orientation="vertical"
                    >

                <LinearLayout android:id="@+id/show_date_layout"
                              android:layout_width="fill_parent"
                              android:layout_height="wrap_content"
                              android:visibility="gone"
                              android:padding="5dp"
                        >

                    <ru.myshows.components.RobotoTextView
                            android:id="@+id/show_date_label"
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:text="@string/date"
                            android:layout_weight="0.4"
                            />

                    <ru.myshows.components.RobotoTextView
                            android:id="@+id/show_date_value"
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:gravity="left"
                            android:layout_weight="0.6"

                            />

                </LinearLayout>


                <LinearLayout android:id="@+id/show_rating_myshows_layout"
                              android:layout_width="fill_parent"
                              android:layout_height="wrap_content"
                        >

                    <ru.myshows.components.RobotoTextView
                            android:id="@+id/show_rating_myshows_label"
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:text="@string/my_shows_rating"
                            android:layout_weight="0.4"
                            android:padding="5dp"
                            android:layout_gravity="center_vertical"

                            />
                    <LinearLayout
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:layout_weight="0.6"
                            >

                        <RatingBar
                                android:id="@+id/show_rating_myshows_value"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:numStars="5"
                                android:stepSize="0.25"
                                android:isIndicator="true"
                                style="@style/DarkRatingBar"
                                />
                    </LinearLayout>

                </LinearLayout>


                <LinearLayout android:id="@+id/show_rating_yours_layout"
                              android:layout_width="fill_parent"
                              android:layout_height="wrap_content"
                        >

                    <ru.myshows.components.RobotoTextView
                            android:id="@+id/show_rating_yours"
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:text="@string/yours_rating"
                            android:padding="5dp"
                            android:layout_weight="0.4"
                            android:layout_gravity="center_vertical"
                            />

                    <LinearLayout
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:layout_weight="0.6"
                            >
                        <RatingBar
                                android:id="@+id/show_rating_yours_value"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:numStars="5"
                                android:stepSize="1.0"
                                android:isIndicator="false"
                                style="@style/DarkRatingBar"
                                />
                    </LinearLayout>

                </LinearLayout>


            </LinearLayout>

            <LinearLayout
                    android:id="@+id/show_status_buttons_layout"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:paddingTop="10dp"
                    android:orientation="horizontal"
                    android:visibility="gone"
                    >

                <Button android:id="@+id/button_watching"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/status_watching"
                        android:padding="1dp"
                        android:layout_weight="0.25"
                        android:onClick="changeShowStatus"
                        style="@style/DarkStatusButtonInactive"/>

                <Button android:id="@+id/button_will_watch"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/status_will_watch"
                        android:layout_weight="0.25"
                        android:onClick="changeShowStatus"
                        style="@style/DarkStatusButtonInactive"/>

                <Button android:id="@+id/button_cancelled"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/status_cancelled"
                        android:layout_weight="0.25"
                        android:onClick="changeShowStatus"
                        style="@style/DarkStatusButtonInactive"/>

                <Button android:id="@+id/button_remove"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/status_remove"
                        android:layout_weight="0.25"
                        android:onClick="changeShowStatus"
                        style="@style/DarkStatusButtonInactive"/>


            </LinearLayout>

        </LinearLayout>
    </ScrollView>

